--- a/Auction.API/appsettings.json
+++ b/Auction.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "EventStore": {
+    "ConnectionString": "PORT = 5432; HOST = 127.0.0.1; TIMEOUT = 15; POOLING = True; MINPOOLSIZE = 1; MAXPOOLSIZE = 100; COMMANDTIMEOUT = 20; DATABASE = 'postgres'; PASSWORD = 'Password12!'; USER ID = 'postgres'",
+    "Schema": "public"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=EventStore;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
